# app/media_types.go
@@ -1,12 +1,12 @@
-// API "Iroha-Gateway Server": Application Media Types
+// Code generated by goagen v1.2.0, DO NOT EDIT.
 //
-// Code generated by goagen v1.1.0-dirty, DO NOT EDIT.
+// API "Iroha-Gateway Server": Application Media Types
 //
 // Command:
 // $ goagen
 // --design=github.com/soramitsu/iroha-gateway/design
 // --out=$(GOPATH)/src/github.com/soramitsu/iroha-gateway
-// --version=v1.1.0-dirty
+// --version=v1.2.0-dirty
 
 package app
 
@@ -19,7 +19,7 @@ import (
 // Identifier: application/vnd.account+json; view=default
 type Account struct {
 	// account
-	Account *AccountFull `form:"account" json:"account" xml:"account"`
+	Account *Account `form:"account" json:"account" xml:"account"`
 	// response code
 	Code int `form:"code" json:"code" xml:"code"`
 	// response message
@@ -48,7 +48,7 @@ func (mt *Account) Validate() (err error) {
 // Identifier: application/vnd.accounts+json; view=default
 type Accounts struct {
 	// accounts
-	Accounts []*AccountFull `form:"accounts" json:"accounts" xml:"accounts"`
+	Accounts []*Account `form:"accounts" json:"accounts" xml:"accounts"`
 	// response code
 	Code int `form:"code" json:"code" xml:"code"`
 	// response message
