# design/accounts.go
@@ -5,84 +5,112 @@ import (
 	. "github.com/goadesign/goa/design/apidsl"
 )
 
-var _ = Resource("accounts", func() {
-	BasePath("/accounts")
-	Action("getAll", func() {
-		Routing(GET("/"))
-		Description("get all accounts")
-		Response(OK, AccountsResponse)
-		Response(BadRequest, MessageResponse)
-		Response(InternalServerError, MessageResponse)
-	})
+var _ = Resource("account", func() {
 
-	Action("get", func() {
-		Routing(GET("/:guid"))
-		Description("get an account by public key")
+	Action("getByUUID", func() {
+		Routing(GET("/accounts/:uuid"))
+		Description("get an account by account's UUID")
 		Params(func() {
-			Param("guid", String, func() {
-				Pattern(base64Pattern)
-				Example(exampleAccountGUIDEncoded)
-				Description("GUID of URL-encoded account")
-			})
-			Param("creator_pubkey", String, func() {
-				Pattern(`[0-9a-zA-Z-_.~]+`)
-				Example(exampleTargetEncoded)
-				Description("Public key of URL-encoded creator's account")
-
+			Param("uuid", String, func() {
+				Pattern(patternAccountUUID)
+				Example(exampleAccountUUID)
+				Description("account's UUID")
 			})
 			Param("is_committed", Boolean, func() {
 				Description("If this value is true, you can only get transactions committed to ametsuchi")
 				Example(false)
 			})
-
-			Required("guid")
+			Required("uuid")
 		})
 		Response(OK, AccountResponse)
-		Response(BadRequest, MessageResponse)
-		Response(InternalServerError, MessageResponse)
+	})
+
+	Action("getByUsername", func() {
+		Routing(GET("/domains/:domain_uri/accounts/:username"))
+		Description("get an account by account's domain and username")
+		Params(func() {
+			Param("domain_uri", String, func() {
+				Pattern(patternDomainURI)
+				Example(exampleDomainURI)
+				Description(descriptionDomainURI)
+			})
+			Param("username", String, func() {
+				Pattern(patternAccountUsername)
+				Example(exampleAccountUsername)
+				Description(descriptionAccountUsername)
+			})
+			Param("is_committed", Boolean, func() {
+				Description("If this value is true, you can only get transactions committed to ametsuchi")
+				Example(false)
+			})
+			Required("domain_uri", "username")
+		})
+		Response(OK, AccountResponse)
+	})
+
+	// TODO: Consider a good URL path when get an account with only a user name from the default domain
+	Action("getByUsernameFromDefaultDomain", func() {
+		Routing(GET("/domains/default/accounts/:username"))
+		Description("get an account by account's username from default domain")
+		Params(func() {
+			Param("username", String, func() {
+				Pattern(patternAccountUsername)
+				Example(exampleAccountUsername)
+				Description(descriptionAccountUsername)
+			})
+			Param("is_committed", Boolean, func() {
+				Description("If this value is true, you can only get transactions committed to ametsuchi")
+				Example(false)
+			})
+			Required("domain_uri", "username")
+		})
+		Response(OK, AccountResponse)
+	})
+
+	Action("getAll", func() {
+		Routing(GET("/accounts/"))
+		Description("get all accounts")
+		Response(OK, AccountsResponse)
 	})
 
 	Action("update", func() {
-		Routing(PUT("/:guid"))
+		Routing(PUT("/accounts/:uuid"))
 		Description("update an account")
 		Params(func() {
-			Param("guid", String, func() {
-				Pattern(base64Pattern)
-				Example(exampleTargetEncoded)
-				Description("GUID of URL-encoded account")
+			Param("uuid", String, func() {
+				Pattern(patternAccountUUID)
+				Example(exampleAccountUUID)
+				Description(descriptionAccountUUID)
 			})
-			Required("guid")
+			Required("uuid")
 		})
 		Payload(UpdateAccountRequest)
 		Response(OK, MessageResponse)
-		Response(BadRequest, MessageResponse)
-		Response(InternalServerError, MessageResponse)
 	})
 
 	Action("delete", func() {
-		Routing(DELETE("/:guid"))
+		Routing(DELETE("/accounts/:uuid"))
 		Description("delete an account")
 		Params(func() {
-			Param("guid", String, func() {
-				Pattern(base64Pattern)
-				Example(exampleAccountGUIDEncoded)
-				Description("GUID of URL-encoded account")
+			Param("uuid", String, func() {
+				Pattern(patternAccountUUID)
+				Example(exampleAccountUUID)
+				Description(descriptionAccountUUID)
 			})
 		})
 		Payload(DeleteAccountRequest)
 		Response(OK, MessageResponse)
-		Response(BadRequest, MessageResponse)
-		Response(InternalServerError, MessageResponse)
 	})
 
 	Action("add", func() {
-		Routing(POST("/"))
+		Routing(POST("/accounts"))
 		Description("add an account")
 		Payload(AddAccountRequest)
 		Response(Created, MessageResponse)
-		Response(BadRequest, MessageResponse)
-		Response(InternalServerError, MessageResponse)
 	})
+
+	Response(BadRequest, MessageResponse)
+	Response(InternalServerError, MessageResponse)
 })
 
 var UpdateAccountRequest = Type("UpdateAccountRequest", func() {
@@ -102,7 +130,7 @@ var UpdateAccountRequest = Type("UpdateAccountRequest", func() {
 	Attribute("timestamp", String, func() {
 		Description(descriptionTimestamp)
 		Example(exampleTimestamp)
-		Pattern(timestampPattern)
+		Pattern(patternTimestamp)
 	})
 
 	Required("alias", "creator_pubkey", "signature", "timestamp")
@@ -147,10 +175,10 @@ var AddAccountRequest = Type("AddAccountRequest", func() {
 })
 
 var Account = Type("Account", func() {
-	Attribute("guid", String, func() {
-		Description(descriptionAccountGUID)
-		Example(exampleAccountGUID)
-		Pattern(base64Pattern)
+	Attribute("uuid", String, func() {
+		Description(descriptionAccountUUID)
+		Example(exampleAccountUUID)
+		Pattern(patternBase64)
 	})
 	Attribute("signatories", ArrayOf(String), func() {
 		Description(descriptionSignatories)
@@ -160,10 +188,10 @@ var Account = Type("Account", func() {
 		Description(descriptionQuorum)
 		Example(exampleQuorum)
 		Minimum(1)
-		Maximum(65535)
+		Maximum(32)
 	})
 
-	Required("guid", "signatories", "quorum")
+	Required("uuid", "signatories", "quorum")
 })
 
 var AccountResponse = MediaType("application/vnd.account+json", func() {
